--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lucide-react": "^0.542.0",
     "lucide-vue-next": "^0.542.0",
     "papaparse": "^5.5.3",
-    "vue": "^3.5.21"
+    "vue": "^3.5.21",
+    "vue-qrcode-reader": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
