--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lucide-vue-next": "^0.542.0",
     "papaparse": "^5.5.3",
     "vue": "^3.5.21",
-    "vue-qrcode-reader": "^5.0.0"
+    "vue-qrcode-reader": "^5.0.0",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
